--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@ information about the selected place.</string>
     <string name="features_4">As a user, I want to see a picture of the nearby places. Query to find if images are available for
 the place, if not handle the error. Please use a spinner or activity indicator to let the user know
 an image is loading.</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
