Single Place location working Minor adjustments to layouts and code formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@ information about the selected place.</string>
 the place, if not handle the error. Please use a spinner or activity indicator to let the user know
 an image is loading.</string>
     <string name="title_activity_maps">Map</string>
+    <string name="no_photos_available">No photos available</string>
 
 </resources>
